[package]
name = "rust-cloudflare-dynamic-public-ip"
description = "Auto update cloudflare dns entries when the public IP changes"
version = "0.3.1"
edition = "2024"

[dependencies]
bincode = "1.3.3"
bytes = { version = "1.10.1", features = ["serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.47", features = ["derive"] }
colored = "3.0.0"
dotenvy = "0.15.7"
log = "0.4.28"
public-ip = "0.2.2"
rand = "0.9.2"
reqwest = { version = "0.12.23", features = ["json"] }
rumqttc = "0.24.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }

[dev-dependencies]
httpmock = "0.7.0"
