[package]
name = "rust-cloudflare-dynamic-public-ip"
description = "Auto update cloudflare dns entries when the public IP changes"
version = "0.4.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
bytes = { version = "1.11", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6", features = ["derive"] }
colored = "3.1"
derive_setters = "0.1"
directories = "6.0.0"
dotenvy = "0.15"
log = "0.4"
public-ip = "0.2"
rand = "0.10"
reqwest = { version = "0.13", features = ["json"] }
rumqttc = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.27"
tokio = { version = "1.52", features = ["full"] }

[dev-dependencies]
httpmock = "0.8"
